# SmolVM

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  main.py  plan.md  play.ipynb  pyproject.toml
.agents/skills/cli-docs-guidelines/: SKILL.md
.claude/skills/readme-guidelines/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-microvm-kernel.yml  build-published-images.yml  build-qemu-kernel.yml  e2e.yml  lint.yml  notify-slack.yml  openapi.yml  publish-core.yml  publish-dashboard-ui.yml  publish.yml  pytest.yml  smoke-published-images.yml
docs/: README.md  installation.md
docs/benchmarks/: boot-latency-learnings.md  final-report.md  startup-speedups.md
docs/concepts/: network-egress-controls.md
docs/contributing/: architecture.md  macos-spike.md  native-core.md
docs/deep-dive/: filesystem-and-disk-images.md  microvm-from-first-principles.md  optimization-plan.md  qemu-guest-networking.md  smolvm-core.md  startup-time-optimization-plan.md  windows-guest-qemu.md
docs/guides/: agent-presets.md  browser.md  macos.md  networking.md  sandboxes.md  snapshots.md  windows.md
docs/reference/: cli.md
examples/: browser_sandbox.py  browser_session.py  env_injection.py  openclaw.py  quickstart_sandbox.py
examples/agent_tools/: README.md  computer_use_browser.py  langchain_tool.py  openai_agents_tool.py  pydanticai_agent_browser.py  pydanticai_reusable_tool.py  pydanticai_tool.py
examples/community/axioticai/: prompt_injection_callback.ipynb
examples/cua/legacy_report_fetcher/: README.md  run_demo.py
examples/openai-agents-sdk/: harness_outside_sandbox.py
guest-agent/: Cargo.toml
guest-agent/src/: boot.rs  env.rs  exec.rs  files.rs  handler.rs  lib.rs  main.rs  ports.rs  server.rs  terminal.rs
kernel/microvm/: README.md  build.sh  config.fragment  linux.sha256
kernel/qemu/: README.md  build.sh  config.amd64.fragment  config.arm64.fragment  config.fragment  linux.sha256
rust/smolvm-native/: Cargo.toml
rust/smolvm-native/src/: lib.rs  route.rs  sysctl.rs
rust/smolvm-netlink/: Cargo.toml
rust/smolvm-netlink/src/: error.rs  tap.rs
scripts/: bench_backends.py  dump_openapi.py  exp_final.py  exp_userspace.py  exp_vsock_trim.py  install.sh  profile_boot.py  system-setup-macos.sh  system-setup.sh
scripts/benchmarks/: README.md  artifacts.py  bench.py  bench_disk_materialization.py  bench_subprocess.py  boot_telemetry.py  browser_ready.py  disk_io.py  file_transfer.py  metrics.py  networking.py  preset_start.py  reporting.py  runtime_control.py  ubuntu_transport.py
scripts/ci/: Dockerfile.base-alpine-rootfs  Dockerfile.base-rootfs  build-base-rootfs.sh  build-preset.sh  preset-init.sh
scripts/internal/: configure-runtime-sudoers.sh  image-build-loopfs.sh  install-firecracker.sh
smolvm-core/: Cargo.toml  README.md  pyproject.toml
smolvm-core/python/smolvm_core/: __init__.py  __main__.py  capabilities.py  disk.py  errors.py  firecracker.py  network.py  qmp.py
smolvm-core/src/: disk.rs  error.rs  firecracker.rs  lib.rs  network.rs  python.rs  qmp.rs  route.rs  sysctl.rs  tap.rs
src/smolvm/: __init__.py  _accel.py  _naming.py  api.py  backends.py  boot_profiles.py  browser.py  build.py  callbacks.py  cleanup.py  cli.py  cli_output.py  cloud_init.py  doctor.py  env.py  env_windows.py  exceptions.py  facade.py  host.py  images.py  kernels.py  network.py  qmp.py  runtime.py  runtime_firecracker.py  runtime_libkrun.py  runtime_qemu.py  setup.py  ssh.py  storage.py  types.py  utils.py  vm.py
src/smolvm/_setup_assets/: __init__.py
src/smolvm/cli/: __init__.py  _kvm_session.py  cleanup.py  completion.py  image.py  image_transfer.py  main.py  output.py  prune.py  update.py  version_check.py
src/smolvm/comm/: __init__.py  base.py  protocol.py  rust_http_vsock_channel.py  select.py  vsock_channel.py
src/smolvm/dashboard/: __init__.py  commands.py  connection_manager.py  poller.py  server.py
src/smolvm/demos/: __init__.py  api.py  setup.py  simple.py  ssh.py
src/smolvm/guest_agent/: __init__.py  agent.py
src/smolvm/host/: __init__.py  _accel.py  disk.py  doctor.py  lume.py  manager.py  network.py  setup.py
src/smolvm/images/: __init__.py  boot.py  builder.py  cloud_init.py  manager.py  published.py
src/smolvm/macos/: __init__.py  desktop.py  driver.py  images.py  lume.py  models.py
src/smolvm/presets/: __init__.py  _git.py  _install.py  _scripts.py  _types.py  claude_code.py  codex.py  hermes.py  openclaw.py  pi.py
src/smolvm/runtime/: __init__.py  _libkrun_ffi.py  _libkrun_launcher.py  backends.py  base.py  boot_profiles.py  firecracker.py  guest_platforms.py  libkrun.py  qemu.py  qemu_args.py  vz.py
src/smolvm/server/: __init__.py  app.py  models.py
tests/: __init__.py  conftest.py  test_api.py  test_async_lifecycle.py  test_backends.py  test_benchmark_boot_telemetry.py  test_benchmark_foundation.py  test_benchmark_reporting.py  test_boot_profiles.py  test_bridge_networking.py  test_browser.py  test_build.py  test_callbacks.py  test_cleanup.py  test_cli.py  test_cli_macos_desktop.py  test_cloud_init.py  test_comm.py  test_comm_select.py  test_computer_use_browser.py  test_custom_boot_api.py  test_dashboard_commands.py  test_dashboard_connection_manager.py  test_dashboard_server.py  test_doctor.py  test_env.py  test_env_windows.py  test_examples.py  test_facade.py  test_facade_macos_desktop.py  test_facade_vsock.py  test_guest_agent.py  test_guest_agent_image.py  test_host.py  test_host_disk.py  test_host_lume.py  test_image_build_cmd.py  test_image_cmd.py  test_image_transfer.py  test_images.py  (+41 more)
tests/e2e/: _util.py  conftest.py  test_bridge_networking.py  test_browser.py  test_lifecycle.py
ts/: openapi-ts.config.ts  openapi.json  package-lock.json  package.json
ts/src/: index.ts
ui/: .dashboard-ui-tag  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
ui/src/: App.jsx
(+34 files in other folders)
