[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "smolvm"
version = "0.0.9.dev0"
description = "Secure runtime for AI agents, and tools -- free and open-source from Celesto AI 🧡"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Celesto AI", email = "hello@celesto.ai" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Emulators",
]
dependencies = [
    "paramiko>=3.0",
    "pycdlib>=1.14.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "requests>=2.28",
    "requests-unixsocket>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=4.0",
    "ruff>=0.15.0",
    "mypy>=1.0",
    "pre-commit>=4.2.0",
]
s3 = [
    "boto3>=1.26",
    "python-dotenv>=1.0",
]
postgres = [
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.1",
]
dashboard = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
]
examples = [
    "langchain",
    "langchain-openai",
    "openai",
    "openai-agents",
    "playwright",
    "pydantic-ai",
]
all = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
    "langchain",
    "langchain-openai",
    "openai",
    "openai-agents",
    "playwright",
    "pydantic-ai",
]

[project.scripts]
smolvm = "smolvm.cli:main"
smolvm-delete = "smolvm.cleanup:main"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "src"
module-name = "smolvm._native"
manifest-path = "rust/smolvm-native/Cargo.toml"
include = [
    "scripts/system-setup.sh",
    "scripts/system-setup-macos.sh",
    "scripts/internal/install-firecracker.sh",
    "scripts/internal/configure-runtime-sudoers.sh",
    "scripts/internal/image-build-loopfs.sh",
]
exclude = ["/ui"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
