[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smolvm"
version = "0.0.22a1"
description = "Isolated computers that AI agents can use to browse, run code, and get real work done. Free and open-source from Celesto AI"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Celesto AI", email = "hello@celesto.ai" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: System :: Emulators",
]
dependencies = [
    "click>=8.0",
    "smolvm-core~=2026.6.23",
    "paramiko>=3.0",
    "pycdlib>=1.14.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "requests>=2.28",
    "requests-unixsocket>=0.3",
    # Decompresses zstd-compressed published images (downloaded via
    # ensure_published_image). Pure C extension, ~200 KB wheel, no system deps.
    "zstandard>=0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.15.0",
    "mypy>=1.0",
    "pre-commit>=4.2.0",
]
s3 = [
    "boto3>=1.26",
    "python-dotenv>=1.0",
]
postgres = [
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.1",
]
dashboard = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
]
all = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
]

[project.scripts]
smolvm = "smolvm.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/smolvm"]

[tool.hatch.build.targets.wheel.force-include]
"scripts/system-setup.sh" = "smolvm/_setup_assets/system-setup.sh"
"scripts/system-setup-macos.sh" = "smolvm/_setup_assets/system-setup-macos.sh"
"scripts/internal/install-firecracker.sh" = "smolvm/_setup_assets/internal/install-firecracker.sh"
"scripts/internal/configure-runtime-sudoers.sh" = "smolvm/_setup_assets/internal/configure-runtime-sudoers.sh"
"scripts/internal/image-build-loopfs.sh" = "smolvm/_setup_assets/internal/image-build-loopfs.sh"

[tool.hatch.build]
exclude = ["/ui", "/smolvm-core"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.uv.sources]
smolvm-core = { workspace = true }

[tool.uv.workspace]
members = ["smolvm-core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# e2e tests boot real KVM VMs; deselect them from the default fast suite.
# The e2e workflow opts in explicitly with `pytest -m e2e`.
addopts = "-v --tb=short -m 'not e2e'"
markers = [
    "e2e: boots real KVM VMs; CI/explicit only, needs /dev/kvm",
]
