[package]
name = "smolvm-core"
version = "0.0.10"
edition = "2021"
license = "Apache-2.0"
description = "Rust-native core package for SmolVM"
homepage = "https://github.com/CelestoAI/SmolVM"
repository = "https://github.com/CelestoAI/SmolVM"
readme = "README.md"

[lib]
name = "_smolvm_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
libc = "0.2"
thiserror = "1"
pyo3-log = "0.13"
log = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["ioctl", "net", "user"] }
rtnetlink = "0.14"
netlink-packet-route = "0.19"
tokio = { version = "1", features = ["rt", "net", "macros"] }
futures-util = "0.3"
