[package]
name = "smolvm-core"
version = "0.0.11"
description = "Rust-native core package for SmolVM"
documentation = "https://docs.rs/smolvm-core"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "_smolvm_core"
crate-type = ["cdylib", "rlib"]

[features]
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = "0.28"
libc = "0.2"
thiserror = "2"
pyo3-log = "0.13"
log = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = "0.21"
netlink-packet-route = "0.30"
tokio = { version = "1", features = ["rt", "net", "macros"] }
futures-util = "0.3"
