[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "smolvm-core"
dynamic = ["version"]
description = "Rust-accelerated network operations for SmolVM"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Celesto AI", email = "hello@celesto.ai" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
]

[project.urls]
Homepage = "https://github.com/CelestoAI/SmolVM"
Repository = "https://github.com/CelestoAI/SmolVM"
Documentation = "https://docs.celesto.ai"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "smolvm_core._smolvm_core"
