[package]
name = "smolvm-native"
version = "0.1.0"
edition = "2021"

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
libc = "0.2"
thiserror = "1"
pyo3-log = "0.12"
log = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["ioctl", "net", "user"] }
rtnetlink = "0.14"
netlink-packet-route = "0.19"
tokio = { version = "1", features = ["rt", "net", "macros"] }
futures-util = "0.3"
